--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
   "dependencies": {
     "ajv": "^6.10.0",
     "asyncapi": "^2.2.0",
+    "asyncapi-parser": "^0.1.3",
     "commander": "^2.12.2",
     "fs.extra": "^1.3.2",
-    "handlebars": "^4.1.1",
-    "js-yaml": "^3.13.0",
+    "handlebars": "^4.1.2",
+    "js-yaml": "^3.13.1",
     "json-schema-ref-parser": "^5.1.0",
     "lodash": "^4.17.11",
     "markdown-it": "^8.4.1",
